[package]
name = "k8s-crds-traefik"
version = "0.1.0"
edition = "2021"

[dependencies]
k8s-openapi = "0.20.0"
kube = { version = "0.87.2", default-features = false }
kube-derive = "0.87.2"
schemars = { version = "0.8.16", optional = true }
serde = { version = "1.0.195", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.111", default-features = false }
typed-builder = { version = "0.18.0", optional = true }

[features]
schemars = ["dep:schemars", "k8s-openapi/schemars", "kube/derive"]
builder = ["dep:typed-builder"]
