[package]
name = "k8s-crds-traefik"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "Kubernetes CRDs for Traefik"
repository = "https://github.com/kube-crds-rs/traefik"

[dependencies]
k8s-openapi = "0.22.0"
kube = { version = "0.93.1", default-features = false }
kube-derive = "0.93.1"
schemars = { version = "0.8.16", optional = true }
serde = { version = "1.0.195", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.111", default-features = false }
typed-builder = { version = "0.18.0", optional = true }

[package.metadata.docs.rs]
features = ["_docs"]

[features]
schemars = ["dep:schemars", "k8s-openapi/schemars", "kube/derive"]
builder = ["dep:typed-builder"]
_docs = ["k8s-openapi/v1_28"]
